--- a/client/src/app/posts/post-create/post-create.component.scss
+++ b/client/src/app/posts/post-create/post-create.component.scss
@@ -1,14 +1,25 @@
+form {
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  margin: 1rem auto;
+
+}
+
 mat-card {
   width: 80%;
-  margin: auto;
+  margin: 1rem auto;
 }
 
 mat-form-field,
 textarea {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   width: 100%;
 }
 
 button {
-  width: 50%;
   margin: auto;
+  width: 50%;
 }
