Add database for posts and some minor UI updates

--- a/client/src/app/posts/post-create/post-create.component.html
+++ b/client/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,12 @@
 <mat-card>
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
     <mat-form-field>
-      <input matInput placeholder="Title" name="title" ngModel required minlength="3" #title="ngModel">
+      <input matInput placeholder="Enter Title" name="title" ngModel required minlength="3" #title="ngModel">
       <mat-error *ngIf="title.invalid"> Error with Title</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput rows=6 title="content" name="content" ngModel required maxlength="360" #content="ngModel"></textarea>
+      <textarea matInput rows=6 placeholder="Enter Content" title="content" name="content" ngModel required
+        maxlength="360" #content="ngModel"></textarea>
       <mat-error *ngIf="content.invalid"> Error with Content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" type="submit">Save Post</button>
